[package]
name = "xpd_timer"
version = "0.1.0"
authors = ["Huayao.Wang <wanghuayao@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
log = "0.4"
timed = "0.2.1"

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = [
    "examples/complex"
]
